# binks-agent-orchestrator

./: .agent.toml  .agent.toml.example  .gitignore  .mcp.json  .mcp.json.bak  .rustfmt.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.agent  Makefile  README.md  clippy.toml  quickstart.sh  run_orchestrator.py  test_api.py
agent/: .agent.toml  .agent.toml.example  .gitignore  .mcp.json  Cargo.toml  README.md
agent/src/: config.rs  context.rs  lib.rs  main.rs  workflow_client.rs
agent/src/agent/: builder.rs  capabilities.rs  events.rs  metrics.rs  mod.rs  tools.rs  types.rs
agent/src/cli/: args.rs  mcps_args.rs  mod.rs  modes.rs  repl.rs  runs_args.rs  selfheal_args.rs  workflow_args.rs
agent/src/db/: conversations.rs  messages.rs  mod.rs  runs.rs  schema.rs
agent/src/handlers/: agent_handler.rs  core.rs  health.rs  mod.rs  monitor.rs  runs.rs  selfheal.rs  serve.rs  tools.rs  web.rs  workflow.rs
agent/src/llm/: mod.rs  ollama.rs
agent/src/mcp/: client.rs  manager.rs  mod.rs  model_size.rs  pool.rs  spawn.rs  types.rs
agent/src/mcps/: client.rs  daemon.rs  mod.rs  protocol.rs
agent/src/models/: mod.rs
agent/src/monitor/: mod.rs
agent/src/orchestrator/: agent_config.rs  checkpoint.rs  engine.rs  mod.rs  workflow.rs
agent/src/output/: mod.rs  plain.rs  terminal.rs
agent/src/server/: mod.rs
agent/src/streaming/: buffer.rs  mod.rs
agent/src/web/: api.rs  auth.rs  fixtures.rs  mod.rs  runs.rs  state.rs  workflows.rs  ws.rs
agent/static/: index.html
agent/tests/: e2e.rs
agent/tests/e2e/: directory_independence.rs  health_check.rs  prerequisites.rs  tier_filtering.rs  tool_execution.rs
apps/agent-panel/: Cargo.toml  README.md
apps/agent-panel/config/: agents.toml
apps/agent-panel/src/: app.rs  config.rs  ipc.rs  main.rs
benchmarks/binks-bench/: Cargo.toml
benchmarks/binks-bench/benches/: agent.rs
benchmarks/binks-bench/src/: baseline.rs  collector.rs  lib.rs  main.rs  reporter.rs  runner.rs
client/: README.md
common/mcp-common/: Cargo.toml
common/mcp-common/src/: embeddable.rs  encoding.rs  error.rs  imaging.rs  init.rs  lib.rs  result.rs
mcps/adb-mcp/: Cargo.toml
mcps/adb-mcp/src/: handlers.rs  lib.rs  main.rs  params.rs  processing.rs  server.rs
mcps/binks-ffi/: Cargo.toml
mcps/binks-ffi/include/: binks.h
mcps/binks-ffi/src/: agent.rs  lib.rs
mcps/doctl-mcp/: Cargo.toml
mcps/doctl-mcp/src/: main.rs  server.rs
mcps/exec-mcp/: Cargo.toml
mcps/exec-mcp/src/: guard.rs  handlers.rs  lib.rs  main.rs  params.rs  server.rs  types.rs
mcps/filesystem-mcp/: Cargo.toml  README.md  filesystem-mcp.example.toml
mcps/filesystem-mcp/src/: handlers.rs  lib.rs  main.rs  params.rs  sandbox.rs  server.rs  types.rs
mcps/git-mcp/: Cargo.toml  README.md
mcps/git-mcp/src/: lib.rs  main.rs  params.rs  server.rs  types.rs
mcps/github-gh/: Cargo.toml  README.md
mcps/github-gh/src/: lib.rs  main.rs  server.rs
mcps/github-gh/tests/: integration.rs
mcps/inbox-mcp/: Cargo.toml
mcps/inbox-mcp/src/: lib.rs  main.rs  server.rs  types.rs
mcps/knowledge-mcp/: Cargo.toml  knowledge.example.toml
mcps/knowledge-mcp/src/: config.rs  docs_store.rs  handlers.rs  ingest.rs  lib.rs  main.rs  params.rs  project_notes.rs  schema.rs  server.rs  types.rs
mcps/linear-cli-mcp/: Cargo.toml
mcps/linear-cli-mcp/src/: lib.rs  main.rs  server.rs
mcps/memory-mcp/: Cargo.toml  README.md
mcps/memory-mcp/src/: handlers.rs  lib.rs  main.rs  params.rs  persistent.rs  server.rs  session.rs  types.rs
mcps/notify-mcp/: Cargo.toml
mcps/notify-mcp/src/: lib.rs  main.rs  server.rs
mcps/rico-mcp/: Cargo.toml
mcps/rico-mcp/src/: config.rs  lib.rs  main.rs  params.rs  server.rs  types.rs
mcps/sql-mcp/: Cargo.toml
mcps/sql-mcp/src/: config.rs  lib.rs  main.rs  server.rs
mcps/sysinfo-mcp/: Cargo.toml  README.md
mcps/sysinfo-mcp/src/: lib.rs  main.rs  server.rs
mcps/task-mcp/: Cargo.toml
mcps/task-mcp/src/: handlers.rs  lib.rs  main.rs  params.rs  repository.rs  schema.rs  server.rs  tests.rs  types.rs
mcps/unity-mcp/: Cargo.toml
mcps/unity-mcp/src/: detect.rs  lib.rs  log_parser.rs  main.rs  params.rs  runtime_parser.rs  server.rs
mcps/web-search-mcp/: BENCHMARKS.md  Cargo.toml
mcps/web-search-mcp/src/: config.rs  lib.rs  main.rs  server.rs  types.rs
mcps/workflow-mcp/: Cargo.toml
mcps/workflow-mcp/src/: lib.rs  loader.rs  main.rs  server.rs  types.rs
orchestrator/: BENCHMARKING.md  Cargo.toml  README.md
orchestrator/.orchestrator/: activeContext.md  productContext.md
orchestrator/agno/: .env.example  README.md  requirements.txt
orchestrator/agno/src/: agent.py  playground.py
orchestrator/agno/tools/: kubectl_tool.py
orchestrator/agno_light/: API_GUIDE.md  requirements.txt
orchestrator/agno_light/src/: playground.py
orchestrator/agno_light/tools/: agent_spawner.py
orchestrator/cli_orchestrator/: README.md  __init__.py  agent.py  benchmark.py  config.py  main.py  memory_bank.py  model_evaluator.py  orchestrator.py  profiles.py  qa_verifier.py
orchestrator/cli_orchestrator/.orchestrator/: activeContext.md  productContext.md  systemPatterns.md
orchestrator/cli_orchestrator/benchmarks/: 2025-12-12_workflow_results.json  2025-12-12_workflow_summary.md  MODEL_SELECTION_ROADMAP.md  README.md  rate_limiter.py  run_workflow_tests.py  test_projects.py
orchestrator/cli_orchestrator/docs/: ARCHITECTURE.md  ROLES.md
orchestrator/cli_orchestrator/examples/: __init__.py  multi_agent_demo.py
orchestrator/cli_orchestrator/runners/: __init__.py  base.py  claude_runner.py  custom_runner.py  factory_runner.py  gemini_runner.py  groq_runner.py  openrouter_runner.py
orchestrator/cli_orchestrator/tests/: __init__.py  conftest.py  pytest.ini  requirements-test.txt  test_config.py  test_model_evaluator.py  test_qa_verifier.py
orchestrator/cli_orchestrator/tools/: __init__.py  headless_tools.py
orchestrator/crewai/: .env.example  README.md
orchestrator/crewai/requirements/: base.txt
orchestrator/src/: agent_config.rs  checkpoint.rs  engine.rs  lib.rs  main.py  main.rs  workflow.rs
orchestrator/src/api/: server.py
(+268 files in other folders)
