[workspace]
resolver = "2"
members = [
    "agent",
    # Common crates
    "common/mcp-common",
    # Benchmarks
    "benchmarks/binks-bench",
    # MCP servers
    "mcps/sysinfo-mcp",
    "mcps/github-gh",
    "mcps/inbox-mcp",
    "mcps/notify-mcp",
    "mcps/filesystem-mcp",
    "mcps/web-search-mcp",
    "mcps/git-mcp",
    "mcps/memory-mcp",
    "mcps/exec-mcp",
    "mcps/sql-mcp",
    "mcps/task-mcp",
    "mcps/self-healing-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Internal crates
mcp-common = { path = "common/mcp-common" }

# Async runtime
tokio = { version = "1", features = ["full", "process", "io-std"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Schema generation
schemars = "1.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# MCP
rmcp = { version = "0.13", features = ["server", "client", "macros", "transport-io", "transport-child-process"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
