[package]
name = "agent"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust agent with Ollama and MCP support"

[dependencies]
# LLM - Ollama
ollama-rs = { version = "0.3", features = ["stream"] }

# MCP (client + server) - same version as github-gh MCP
rmcp = { version = "0.13", features = ["server", "client", "macros", "transport-io", "transport-child-process"] }

# Async runtime
tokio = { version = "1", features = ["full", "process", "io-std"] }
async-trait = "0.1"

# URL parsing
url = "2"

# Environment variable expansion
shellexpand = "3"

# HTTP client for direct Ollama calls
reqwest = { version = "0.12", features = ["json"] }

# Date/time
chrono = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
schemars = "1.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Unix signals for daemon management
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Platform directories
dirs = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
