[package]
name = "agent"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust agent with Ollama and MCP support"

# ==============================================================================
# FEATURES - Build profiles for different use cases
# ==============================================================================
#
# Profiles:
#   Minimal:  cargo build --no-default-features
#   Agent:    cargo build --no-default-features --features mcp
#   Full:     cargo build (default)
#
[features]
default = ["mcp", "persistence", "web", "orchestrator", "monitor"]

# MCP tool support - enables agent tool-calling loop
mcp = ["dep:rmcp"]

# SQLite conversation history
persistence = ["dep:rusqlite", "dep:uuid"]

# Web UI server (requires persistence for conversation storage)
web = ["persistence", "dep:axum", "dep:tower-http", "dep:axum-extra", "dep:rust-embed", "dep:mime_guess", "dep:open"]

# Multi-agent workflow orchestration (requires mcp)
orchestrator = ["mcp"]

# Repository monitoring agent (requires mcp)
monitor = ["mcp"]


# ==============================================================================
# CORE DEPENDENCIES - Always included
# ==============================================================================
[dependencies]
# LLM - Ollama
ollama-rs = { version = "0.3", features = ["stream"] }

# Async runtime
tokio = { version = "1", features = ["full", "process", "io-std"] }
async-trait = "0.1"

# URL parsing
url = "2"

# Environment variable expansion
shellexpand = "3"

# HTTP client for direct Ollama calls
reqwest = { version = "0.12", features = ["json"] }

# Date/time
chrono = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
schemars = "1.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex for tool call parsing
regex = "1"

# Unix signals for daemon management
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal detection
atty = "0.2"

# Platform directories
dirs = "6"

# WebSocket/streaming utilities
futures-util = "0.3"

# ==============================================================================
# OPTIONAL DEPENDENCIES - Enabled by features
# ==============================================================================

# MCP protocol (optional: mcp feature)
rmcp = { version = "0.13", features = ["server", "client", "macros", "transport-io", "transport-child-process"], optional = true }

# Database (optional: persistence feature)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

# Web server (optional: web feature)
axum = { version = "0.7", features = ["ws"], optional = true }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"], optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
open = { version = "5", optional = true }


[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking"] }
