[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
description = "Multi-agent workflow orchestration layer for binks-agent"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[lib]
name = "orchestrator"
path = "src/lib.rs"

[dependencies]
# Core agent library
agent = { path = "../agent" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI (for standalone binary)
clap.workspace = true

# Platform directories for config loading
dirs = "6"

[dev-dependencies]
tokio-test = "0.4"
