[package]
name = "binks-bench"
version.workspace = true
edition.workspace = true
description = "Benchmark harness for Binks agent testing and regression detection"

[dependencies]
# Internal crates
binks_agent = { path = "../../agent", package = "agent" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Statistics
statistical = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[[bench]]
name = "agent"
harness = false
