[package]
name = "binks-ffi"
version = "0.1.0"
edition = "2021"
description = "C/FFI bindings for the Binks Agent"
license = "MIT"

[lib]
name = "binks_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Agent with embedded MCP support
binks_agent = { path = "../../agent", package = "agent", features = ["mcp", "embedded"] }

# MCP servers for embedding
sysinfo-mcp = { path = "../sysinfo-mcp" }

# FFI helpers
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread"] }

# Error handling
anyhow = "1.0"
