[package]
name = "exec-mcp"
version.workspace = true
edition.workspace = true

[lib]
name = "exec_mcp"
path = "src/lib.rs"

[[bin]]
name = "exec-mcp"
path = "src/main.rs"

[dependencies]
mcp-common.workspace = true
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

dirs = "5"
regex = "1"
