[package]
name = "filesystem-mcp"
version = "0.1.0"
edition = "2021"
description = "Sandboxed filesystem MCP server with security controls"
license = "MIT"

[dependencies]
# MCP SDK (official)
rmcp = { version = "0.13", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
toml = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Home directory
dirs = "5"

# Glob pattern matching
glob = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "filesystem-mcp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
