[package]
name = "filesystem-mcp"
version.workspace = true
edition.workspace = true
description = "Sandboxed filesystem MCP server with security controls"
license = "MIT"

[dependencies]
# Internal crates
mcp-common.workspace = true

# MCP SDK
rmcp.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
toml.workspace = true

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Home directory
dirs = "5"

# Glob pattern matching
glob = "0.3"

# Logging
tracing.workspace = true

[[bin]]
name = "filesystem-mcp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
