[package]
name = "git-mcp"
version.workspace = true
edition.workspace = true
description = "Git operations MCP server using git2/libgit2"
license = "MIT"

[dependencies]
# Internal crates
mcp-common.workspace = true

# MCP SDK
rmcp.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Git library (libgit2 bindings) - git-mcp specific
git2 = "0.20"

[[bin]]
name = "git-mcp"
path = "src/main.rs"
