[package]
name = "inbox-mcp"
version.workspace = true
edition.workspace = true
description = "Local file-based inbox MCP server for agent notifications"
license = "MIT"

[dependencies]
# Internal crates
mcp-common.workspace = true

# MCP SDK
rmcp.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow.workspace = true

# Home directory
dirs = "5"

# Logging
tracing.workspace = true

[[bin]]
name = "inbox-mcp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
