[package]
name = "knowledge-mcp"
version.workspace = true
edition.workspace = true
description = "Cross-repo knowledge index MCP with FTS5 search"
license = "MIT"

[lib]
name = "knowledge_mcp"
path = "src/lib.rs"

[[bin]]
name = "knowledge-mcp"
path = "src/main.rs"

[dependencies]
mcp-common.workspace = true
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
toml.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
