[package]
name = "memory-mcp"
version = "0.1.0"
edition = "2021"
description = "Dual-layer memory MCP server with session and persistent storage"
license = "MIT"

[dependencies]
# MCP SDK (official)
rmcp = { version = "0.13", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# SQLite for persistent storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Home directory
dirs = "5"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "memory-mcp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.24.0"
