[package]
name = "memory-mcp"
version.workspace = true
edition.workspace = true
description = "Dual-layer memory MCP server with session and persistent storage"
license = "MIT"

[dependencies]
# Internal crates
mcp-common.workspace = true

# MCP SDK
rmcp.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Memory-mcp specific
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "memory-mcp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.24.0"
