[package]
name = "notify-mcp"
version.workspace = true
edition.workspace = true
description = "Notification MCP server for Slack and Discord webhooks"
license = "MIT"

[dependencies]
# Internal crates
mcp-common.workspace = true

# MCP SDK
rmcp.workspace = true

# Async runtime
tokio.workspace = true

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true

[[bin]]
name = "notify-mcp"
path = "src/main.rs"
