[package]
name = "sysinfo-mcp"
version = "0.1.0"
edition = "2021"
description = "Cross-platform system information MCP server"
license = "MIT"

[dependencies]
# MCP SDK (official)
rmcp = { version = "0.13", features = ["server", "macros", "transport-io"] }

# Cross-platform system information
sysinfo = "0.32"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "sysinfo-mcp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
