[package]
name = "sysinfo-mcp"
version.workspace = true
edition.workspace = true
description = "Cross-platform system information MCP server"
license = "MIT"

[dependencies]
# Internal crates
mcp-common.workspace = true

# MCP SDK
rmcp.workspace = true

# Cross-platform system information
sysinfo = "0.32"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true

[[bin]]
name = "sysinfo-mcp"
path = "src/main.rs"
