[package]
name = "web-search-mcp"
version = "0.1.0"
edition = "2021"
description = "Web search MCP server with pluggable backends (Brave, SearXNG, Tavily)"
license = "MIT"

[dependencies]
# MCP SDK (official)
rmcp = { version = "0.13", features = ["server", "macros", "transport-io"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2"

[[bin]]
name = "web-search-mcp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
