[package]
name = "web-search-mcp"
version.workspace = true
edition.workspace = true
description = "Web search MCP server with pluggable backends (Brave, SearXNG, Tavily)"
license = "MIT"

[dependencies]
# Internal crates
mcp-common.workspace = true

# MCP SDK
rmcp.workspace = true

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true

# HTML parsing
scraper = "0.22"
html2md = "0.2"

# Utilities
url = "2"

[[bin]]
name = "web-search-mcp"
path = "src/main.rs"
