[package]
name = "workflow-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "workflow-mcp"
path = "src/main.rs"

[dependencies]
mcp-common.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schemars.workspace = true
chrono.workspace = true
rmcp.workspace = true
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
